--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "feather-icon": "^0.1.0",
+    "feather-icons": "^4.9.0",
     "reset-css": "^4.0.1",
     "vue": "^2.5.17",
+    "vue-feather-icon": "^1.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
