--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "feather-icon": "^0.1.0",
     "feather-icons": "^4.9.0",
+    "here-js-api": "^1.0.10",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
     "reset-css": "^4.0.1",
     "vue": "^2.5.17",
     "vue-feather-icon": "^1.2.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wavesurfer": "^1.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
