--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "feather-icon": "^0.1.0",
     "feather-icons": "^4.9.0",
     "here-js-api": "^1.0.10",
