--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.17",
     "vue-feather-icon": "^1.2.0",
     "vue-router": "^3.0.1",
+    "vue2-dropzone": "^3.5.2",
     "vuex": "^3.0.1",
     "wavesurfer": "^1.3.4"
   },
