--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reset-css": "^4.0.1",
     "vue": "^2.5.17",
     "vue-feather-icon": "^1.2.0",
+    "vue-feather-icons": "^4.7.1",
     "vue-router": "^3.0.1",
     "vue-simple-spinner": "^1.2.8",
     "vue2-dropzone": "^3.5.2",
