--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^2.0.0",
     "here-js-api": "^1.0.10",
     "i": "^0.3.6",
+    "moment": "^2.23.0",
     "npm": "^6.4.1",
     "reset-css": "^4.0.1",
     "vue": "^2.5.17",
