--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
     "feather-icon": "^0.1.0",
     "feather-icons": "^4.9.0",
     "file-saver": "^2.0.0",
